boulder/boulder/tests/compile_fail/type/structures/init_missing_field.bo
struct A {
    b: u32,
}

fn test() -> A {
    A {
        
    }
}
